Revision history for DBIx::Class

        - converted the vendor tests to use schema objects intead of schema
          classes, made cleaned more reliable with END blocks
        - versioning support via DBIx::Class::Schema::Versioned
        - added get_inflated_columns to Row
        - find/next now return undef rather than () on fail from Bernhard Graf
        - rewritten collapse_result to fix prefetch
        - moved populate to resultset
        - added support for creation of related rows via insert and populate
        - transaction support more robust now in the face of varying AutoCommit
          and manual txn_begin usage
        - unbreak back-compat for Row/ResultSet->new_result
        - Added Oracle/WhereJoins.pm for Oracle >= 8 to support
          Oracle <= 9i, and provide Oracle with a better join method for
          later versions.  (I use the term better loosely.)
        - The SQL::T parser class now respects a relationship attribute of
          is_foreign_key_constrain to allow explicit control over wether or
          not a foreign constraint is needed
        - resultset_class/result_class now (again) auto loads the specified
          class; requires Class::Accessor::Grouped 0.05002+
        - added 97result_class.t test, failing ATM
        - added get_inflated_columns to Row
        - %colinfo accessor and inflate_column now work together
        - More documentation updates
        - Error messages from ->deploy made more informative
        - connect_info will now always return the arguments it was
          originally given
        - A few small efficiency improvements for load_classes
          and compose_namespace

0.07006 2007-04-17 23:18:00
        - Lots of documentation updates
        - deploy now takes an optional 'source_names' parameter (dec)
        - Quoting for for columns_info_for
        - RT#25683 fixed (multiple open sths on DBD::Sybase)
        - CDBI compat infers has_many from has_a (Schwern)