@@ -1,5 +1,6 @@
 Revision history for DBIx::Class
 
+        - fixup to ensure join always LEFT after first LEFT join depthwise
         - converted the vendor tests to use schema objects intead of schema
           classes, made cleaned more reliable with END blocks
         - versioning support via DBIx::Class::Schema::Versioned
